добавил просмотр фото и комментов  в магазине

--- a/MiniMarket/app/src/main/res/values-ru/strings.xml
+++ b/MiniMarket/app/src/main/res/values-ru/strings.xml
@@ -149,5 +149,6 @@
     <string name="audio_permission_denied_dialog_title">Запрос на доступ к файловой системе</string>
     <string name="audio_permission_denied_dialog_feedback">Доступ к файловой системе запрещен</string>
     <string name="all_permissions_denied_feedback">Установите все разрешения</string>
+    <string name="pressToOpenPhoto">Нажмите для просмотра фото</string>
 
 </resources>
