--- a/MiniMarket/app/src/main/res/values/strings.xml
+++ b/MiniMarket/app/src/main/res/values/strings.xml
@@ -150,7 +150,7 @@
     <string name="AddPhoto">Add photo</string>
     <string name="audio_permission_denied_dialog_title">Request to file system</string>
     <string name="audio_permission_denied_dialog_feedback">Request to file system denied</string>
-    <string name="permission_rationale_settings_button_text">SETTINGS</string>
     <string name="all_permissions_denied_feedback">All those permissions are needed</string>
+    <string name="pressToOpenPhoto">Press to open photo</string>
 
 </resources>
